# ewxndfd

./: README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: ndfd_api.ipynb  ndfd_api_dev.ipynb
src/ewxndfd/: __init__.py  datetime_utils.py  ndfd_forecast_api.py
src/ewxndfd/ewx/: ewx_datetime.py  ewx_ndfd_file.py
tests/: conftest.py
tests/unit/: conftest.py  test_ndfd_forecast_api.py
