################################################################################
# Build Configuration using uv_build (requires uv installed)
################################################################################

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

# setuptools is python defaut but no longer recommend
# [build-system]
# requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
# build-backend = "setuptools.build_meta"


################################################################################
# Project Configuration
################################################################################

[project]
name = "ewxndfd"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
version = "0.1.4"
# dynamic = ["version"]
description = "Get weather forecast from the National Digital Forecast Database (NDFD) by coordinate in tabular summaries for inserting into databases"
authors = [
    { name = "Patrick Bills", email = "billspat@msu.edu" },
]
license = "MIT"
requires-python = ">= 3.11" 
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = [
    "ipython>=9.7.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/enviroweather/ewxndfd"
"Source Code" = "https://github.com/enviroweather/ewxndfd"
"Bug Tracker" = "https://github.com/enviroweather/ewxndfd/issues"
# Documentation = "https://ewxndfd.readthedocs.io"  
# Download = "https://pypi.org/project/ewxndfd/#files"

[project.scripts]
ndfd_daily = "ewxndfd.ndfd_forecast_api:main"

[project.optional-dependencies]
# The groups below should be in the [development-groups] table
# They are here now because hatch hasn't released support for them but plans to
# in Mid November 2025.
dev = [
    "uv",
    "pre-commit",
]

docs = []

build = [
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]
style = [
    "pydoclint",
    "ruff",
]


################################################################################
# Tool Configuration
################################################################################

######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = ["raises"] # Tells pytest to not raise a warning if you use @pytest.mark.raises

[tool.coverage.paths]
source = [
    "src/ewxndfd",
    "*/site-packages/ewxndfd",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true
omit = [
    "src/ewxndfd/_version.py",
]

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


# TODO determine if we want to use 'ruff' for code linting and formatting
# [tool.ruff]
# line-length = 88

# [tool.ruff.lint]
# select = ["ALL"]
# ignore = [
#     "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
#     "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
#     "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
#     "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
#     "D413",  # 'Missing blank line after section' ignored .
#     "D401",  # 'First line should be in imperative mood' ignored
#     "ANN001",  # Missing type annotation for {arg} in function" ignored
#     "ANN201",  # 'Missing type annotation for {return}'.
# ]
# exclude = [
#     "src/ewxndfd/_version.py",
#     "docs/conf.py",
# ]

# [tool.ruff.lint.extend-per-file-ignores]
# "__init__.py" = [
#     "E401",  # 'Multiple imports on one line'
#     "E402",  # 'Module level import not at top of file'
#     "F401",  # 'Imported but unused'
#     "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
# ]
# "tests/**/*.py" = [
#     "S101",  # 'Use of assert detected' ignored because we are using pytest.
#     "INP001",  # 'Insecure input' ignored because we are testing.
#     "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
# ]

# [tool.ruff.lint.isort]
# case-sensitive = true
# known-first-party = ["src", "ewxndfd"]
# lines-after-imports = 1

# [tool.pydoclint]
# style = "numpy"
# arg-type-hints-in-signature = false
# arg-type-hints-in-docstring = true
# check-return-types = false
# check-yield-types = false
# exclude = "_version.py"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.0.2",
]

